[package]
name = "ng-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.1"
log = "0.4.20"
rand = "0.8.5"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio-tungstenite = "0.21.0"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.30"
tokio-stream = "0.1.14"
